--- a/elteikbsc.html
+++ b/elteikbsc.html
@@ -42,8 +42,8 @@
       <span class="sr-only">Menu</span>
     </button>
     <div class="nav-menu" id="navMenu">
-      <a href="index.html" class="nav-link">Home</a>
-      <a href="redirecter.html" class="nav-link">URL Redirecter</a>
+      <a href="https://heki.lol/" class="nav-link">Home</a>
+      <a href="redirecter" class="nav-link">URL Redirecter</a>
       <a href="#" class="nav-link-active">ELTE IK BSC</a>
     </div>
   </nav>
