--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <span style="padding: 2px 8px; background: rgba(99, 102, 241, 0.1); color: var(--accent-color); border-radius: var(--radius-sm); font-size: var(--font-size-xs);">HTML5</span>
               <span style="padding: 2px 8px; background: rgba(99, 102, 241, 0.1); color: var(--accent-color); border-radius: var(--radius-sm); font-size: var(--font-size-xs);">CSS3</span>
             </div>
-            <a href="redirecter.html" class="btn btn-primary" style="width: 100%;">View Project</a>
+            <a href="redirecter" class="btn btn-primary" style="width: 100%;">View Project</a>
           </div>
         </div>
 
@@ -101,7 +101,7 @@
               <span style="padding: 2px 8px; background: rgba(99, 102, 241, 0.1); color: var(--accent-color); border-radius: var(--radius-sm); font-size: var(--font-size-xs);">CSS3</span>
               <span style="padding: 2px 8px; background: rgba(99, 102, 241, 0.1); color: var(--accent-color); border-radius: var(--radius-sm); font-size: var(--font-size-xs);">JavaScript</span>
             </div>
-            <a href="elteikbsc.html" class="btn btn-primary" style="width: 100%;">View Project</a>
+            <a href="elteikbsc" class="btn btn-primary" style="width: 100%;">View Project</a>
           </div>
         </div>
 
