--- a/redirecter.html
+++ b/redirecter.html
@@ -37,9 +37,9 @@
       <span class="sr-only">Menu</span>
     </button>
     <div class="nav-menu" id="navMenu">
-      <a href="index.html" class="nav-link">Home</a>
+      <a href="https://heki.lol/" class="nav-link">Home</a>
       <a href="#" class="nav-link-active">URL Redirecter</a>
-      <a href="elteikbsc.html" class="nav-link">ELTE IK BSC</a>
+      <a href="elteikbsc" class="nav-link">ELTE IK BSC</a>
     </div>
   </nav>
 
