--- a/redirecter.html
+++ b/redirecter.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>URL Redirecter 🔗 - Heki</title>
   <link rel="stylesheet" href="source/main-styles.css" />
+  <link rel="icon" href="source/favicon.ico" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
 <body>
