--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Heki - home 🏠</title>
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="source/main-styles.css" />
+  <link rel="icon" href="source/favicon.ico" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
 <body>
