--- a/elteikbsc.html
+++ b/elteikbsc.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ELTE IK BSC - jegyzetek 📚</title>
+  <title>ELTE IK BSC - Notes 📚</title>
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="source/main-styles.css">
   <link rel="stylesheet" href="source/elteikbsc-styles.css">
@@ -55,11 +55,11 @@
   <div class="container">
     <div class="elte-container">
       <div class="elte-sidebar">
-        <div class="sidebar-title">📚 ELTE IK jegyzetek</div>
+        <div class="sidebar-title">📚 ELTE IK Notes</div>
         <div id="sidebar"></div>
       </div>
       <div class="elte-content">
-        <div id="content" class="empty-state">Válassz egy fájlt a bal oldalon a tartalom megtekintéséhez.</div>
+        <div id="content" class="empty-state">Choose one from the left to examine it's content.</div>
       </div>
     </div>
   </div>
