--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <div class="card">
           <div class="card-header">
-            <h3 class="card-title">ELTE IK jegyzetek</h3>
+            <h3 class="card-title">ELTE IK Notes</h3>
             <p class="card-description">
                 A user-friendly viewer for the GitHub repository. 
                 Features syntax highlighting, and support for various document types.
